--- a/examples/tutorials/phantom_tutorials/transfer_solana.html
+++ b/examples/tutorials/phantom_tutorials/transfer_solana.html
@@ -94,7 +94,7 @@
 
             const resp = await window.solana.connect();
 
-            fetch("http://localhost:8080/v1/solana/wallet/transfer", {
+            fetch("https://api.blockchainapi.com/v1/solana/wallet/transfer", {
 
                 method: "POST",
 
