--- a/examples/tutorials/phantom_tutorials/transfer_solana.html
+++ b/examples/tutorials/phantom_tutorials/transfer_solana.html
@@ -101,8 +101,8 @@
                 // Do NOT put your keys in a *public* HTML file. This is ONLY for testing purposes.
                 headers: {
                     'Content-Type': 'application/json',
-                    'APIKeyId': 'API-KEY-ID',
-                    'APISecretKey': 'API-SECRET-KEY'
+                    'APIKeyId': 'bPOY4UjN3ULISHj', // INSERT-API-KEY-ID
+                    'APISecretKey': 'zsm2wa0O1OqMBXY' // INSERT-API-SECRET-KEY
                 },
 
                 body: JSON.stringify({
