Add transfer NFT html example

--- a/examples/tutorials/phantom_tutorials/transfer_nft.html
+++ b/examples/tutorials/phantom_tutorials/transfer_nft.html
@@ -110,6 +110,7 @@
                         'recipient_address': 'EW3nXn7X4NTWFKWaJgxKrFNoTSkop1cBUVHA21zrfF6u',
                         'return_compiled_transaction': true,
                         'amount': '1',
+                        // Make sure you own the NFT
                         'token_address': 'HxgctEwnZABYirZU2j65ogCaWQfPQje3y8mbcoV2EREA',
                         'network': 'mainnet-beta'
                     }
